<resources>
    <string name="app_name">Quiz Portugal</string>
    <string name="title">Quiz portugal</string>
    <string name="greeting">Hi there! What\'s your name?</string>
    <string name="your_name">Your Name</string>
    <string name="welcome">Welcome and let\'s start playing the quiz!...</string>
    <string name="question_1">1. Portugal is an european country!</string>
    <string name="question_1_option_1">Yes</string>
    <string name="question_1_option_2">No</string>
    <string name="question_2">2. What is the name of the portuguese capital?</string>
    <string name="question_2_option_1">Lisbon</string>
    <string name="question_2_option_2">Madrid</string>
    <string name="question_3">3. Portugal was founded in the...</string>
    <string name="question_3_option_1">year of 1143</string>
    <string name="question_3_option_2">year of 1755</string>
    <string name="question_4">4. How big is the population of Portugal?</string>
    <string name="question_4_option_1">Around 27 million inhabitants</string>
    <string name="question_4_option_2">Around 10 million inhabitants</string>
    <string name="question_5">5. These things are typical in Portugal</string>
    <string name="question_5_option_1">Fado</string>
    <string name="question_5_option_2">Golf</string>
    <string name="question_5_option_3">Wine</string>
    <string name="question_5_option_4">Cork</string>
    <string name="question_5_option_5">Pastery</string>
    <string name="question_5_option_6">Fish</string>
    <string name="question_5_option_7">Soccer</string>
    <string name="question_5_option_8">Cheese</string>
    <string name="question_6">6. Portugal won one of the eurovision music festival...</string>
    <string name="question_6_option_1">True</string>
    <string name="question_6_option_2">False</string>
    <string name="question_7">7. ...and one of the european soccer championship!</string>
    <string name="question_7_option_1">Right</string>
    <string name="question_7_option_2">Wrong</string>
    <string name="question_8">8. Portugal is a top golf destiny!</string>
    <string name="question_8_option_1">Yup</string>
    <string name="question_8_option_2">Nae</string>
    <string name="question_9">9. Portuguese is the 6th spoken language worldwide!</string>
    <string name="question_9_option_1">I think so!</string>
    <string name="question_9_option_2">Not really!</string>
    <string name="question_10">10. The Websummit is taking place in Lisbon!</string>
    <string name="question_10_option_1">Alright</string>
    <string name="question_10_option_2">No way</string>
    <string name="question_11">11. What is the name of the bridge in lisbon that has 17 kilometers length?</string>
    <string name="question_11_option_1">Ponte 25 de Abril</string>
    <string name="question_11_option_2">Ponte Vasco da Gama</string>
    <string name="question_12">12.the annual average of tourists surpasses the twice of the local population!</string>
    <string name="question_12_option_1">Correct</string>
    <string name="question_12_option_2">Incorrect</string>
    <string name="press_button">PRESS BUTTON BELOW</string>
    <string name="submit_to_score">Submit to score</string>
</resources>
