<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/flag" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/greeting"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/your_name"
            android:inputType="textCapWords"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_1"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yes_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/no_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_2"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/lisbon_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/madrid_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_3"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/y1143_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/y1755_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_4"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/i27m_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/i10m_radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_5"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/fado_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_1"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/golf_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_2"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/wine_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_3"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cork_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_4"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <CheckBox
                    android:id="@+id/pastery_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_5"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/fish_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_6"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/soccer_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_7"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cheese_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:text="@string/question_5_option_8"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_6"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/true_radio_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/false_radio_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_7"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/right_radio_button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/wrong_radio_button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_8"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yup_radio_button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/nae_radio_button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_8_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_9"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/thinkso_radio_button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/notreally_radio_button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_10"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/alright_radio_button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_10_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/noway_radio_button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_10_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_11"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/abril25_radio_button_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_11_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/vascodagama_radio_button_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_11_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/question_12"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/correct_radio_button_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_12_option_1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/incorrect_radio_button_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_12_option_2"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/score_message_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/press_button"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitToScore"
            android:text="@string/submit_to_score" />

    </LinearLayout>

</ScrollView>
